2025-06- ------------------------------------------------------------------------------------------------------------
2025-06- ------------------------------------------------------------------------------------------------------------
2025-06-03 ------------------------------------------------------------------------------------------------------------
* experimented with fleshing out both a CK4 and CK5 editor plugin.  Ran into problems with CK4 that will probably
    eliminate that one as a possibility but only just started testing with CK5
* added new class 'DFSingleFire.js' intended to supercede DFTracker.js as a more generic way to 'oneshot' function
    calls like addEventListener and removeEventlistener, but allso addStyle/removeStyle etc etc...

2025-06-02 ------------------------------------------------------------------------------------------------------------
* got rid of set/getJLDI() and replaced with a new LocalStore class that encapsulates the job much better now
* now remembers slider position based on current db selected
* removed 'open new instance' as an option from the file menu as since it's a webpage you can always just rightclick
    the webpage tab and duplicate already
* moved the loading of all dch's out of index.js and back into DCH_BASE so 'hotloading' is once again supported.
    (no reason to load all these dch classes when only accessing one or two of them for the current given page)
    
2025-06-01 ------------------------------------------------------------------------------------------------------------
* many changes occurred on a seperate branch just to handle upgrading all files to the 2.0 format spec, which have 
    only been documented as commit msgs in git.  They basically detail the process such as it's been reguarding the
    whole upgrade procedure but has not otherwise changed the effective way in which the software works.