@@ -1,10 +1,34 @@
+/*!
+ * DFListenerTracker.js
+ * Copyright (c) Malendryn Tiger (Ron Stanions @ DragonsFire Creations)
+ *
+ * This software is licensed under the GNU Affero General Public License v3.0.
+ * You may obtain a copy of the License at https://www.gnu.org/licenses/agpl-3.0.html
+ *
+ * This program is distributed WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+*/
 /*
 call anything only once, but track how many times the same call and same params were passed so we can remove it later
 
 usage:
-x = new DFSingleFire();
-id = x.add({payload}, onFirst, onRemove)  // call onFirst(payload) once,  return id, if repeated, return same id
-x.remove(id)                              // call onRemove(id), return #remaining, -1 if already removed, -2 if key!found
+create 2 functions like this:
+    function onFirst(payload) {...}  // same data with __DFId added, throws error if fails
+    function onRemove(payload) {...} // same data with __DFId added, throws are caught and ignored so removeAll can continue
+
+connect them to DFSingleFire like this:
+    x = new DFSingleFire();
+    id = x.add({payload}, onFirst, onRemove)  // call onFirst(payload) once,  throw if onFirst throws
+                                                // return id, return same id if same payload+onFirst added again
+    x.remove(id)                              // call onRemove(payload) via id, 
+                                                // return #remaining (0 if last), -1 if already removed, -2 if key!found
+    x.removeAll()                             // remove all tracked by calling onRemove(payload) on each
+
+**** RULES:
+**** payload MUST be a dict{} as we internally add __DFId and _onRemove to it
+**** payload is keyed off ONLY toplevel elements, it does not walk into lists and objects to keyify off them
+        (solves '{el:document.createElement("div")}' dilemma where el: was walked as a {} and matched by accident)
+
 */
 
 export class DFSingleFire {
@@ -16,7 +40,7 @@ export class DFSingleFire {
     }
 
     async add(payload, onFirst, onRemove = () => {}) {
-        payload.__onFirst = onFirst;      // put this in the payload so they get hashed too
+        payload.__onFirst = onFirst;        // put this in the payload as part of the keyHash
         // payload.__onRemove = onRemove;   // but NOT this!
         const key = this.hasher.hash(payload);
         let entry = this.entries.get(key);
@@ -24,7 +48,9 @@ export class DFSingleFire {
         if (entry) {
             entry.refCount++;
         } else {
-            await onFirst(payload);
+            payload.__DFId = this.idCounter;    // pass id to onFirst/onRemove for them to use too (AFTER hashing above)
+            await onFirst(payload);             // call before inserting in case it throws
+
             entry = { 
                 id:       this.idCounter++, 
                 refCount: 1, 
@@ -44,21 +70,18 @@ export class DFSingleFire {
         if (!entry) { return -1; }      // no such key-or-entry was found
 
         if (--entry.refCount <= 0) {
-            await entry.onRemove?.();
             this.entries.delete(key);
             this.idToKey.delete(id);
+            try {
+                await entry.onRemove?.();
+            } catch (err) {}            // catch and silently ignore
         }
-        return entry.refCount;      // return # refs remaining
+        return entry.refCount;          // return # refs remaining
     }
 
-    count(payload) {
-        const key = this.hasher.hash(payload);
-        return this.entries.get(key)?.refCount ?? 0;
-    }
-
-    removeAll() {
+    async removeAll() {
         for (const [key, entry] of this.entries) {
-            entry.teardown?.();
+            await entry.onRemove?.();
             this.idToKey.delete(entry.id);
         }
         this.entries.clear();
@@ -77,7 +100,15 @@ class _IdHasher {
         const t = typeof x;
         if (x === null)        { return "null";      }
         if (t === "undefined") { return "undefined"; }
-        if (t === "boolean" || t === "number" || t === "string") { return JSON.stringify(x); }
+        if (t === "boolean" || t === "number" || t === "string") { 
+            let str = JSON.stringify(x);        
+            let hash = 2166136261;                  // convert to FNV-1a hashed stringVal
+            for (let i = 0; i < str.length; i++) {
+                hash ^= str.charCodeAt(i);
+                hash += (hash << 1) + (hash << 4) + (hash << 7) + (hash << 8) + (hash << 24);
+            }
+            return (hash >>> 0).toString(); // unsigned 32-bit number
+        }
         if (t === "function") {
             if (!this.fnIds.has(x)) this.fnIds.set(x, `fn#${this.counter++}`);
             return this.fnIds.get(x);
@@ -89,21 +120,27 @@ class _IdHasher {
         throw new Error("Unsupported type: " + t);
     }
 
-    hash(value) {
-        const t = typeof value;
-        if (value === null || t === "function" || t !== "object") {
-            return this.getId(value);
-        }
-        if (Array.isArray(value)) {
-            return "[" + value.map(v => this.hash(v)).join(",") + "]";
-        }
+    hash(value) {   // toplevel only, no traversing, value is always a dict
         const keys  = Object.keys(value).sort();                     // sort keys cuz order matters when hashing
-        const parts = keys.map(k => `${k}:${this.hash(value[k])}`);
+        const parts = keys.map(k => `${k}:${this.getId(value[k])}`);
         return `{${parts.join(",")}}`;
     }
+    // hash(value) {    // traverses anything, breaks tests against {a:3} === {a:3} when theyre truly different
+    //     const t = typeof value;
+    //     if (value === null || t === "function" || t !== "object") {
+    //         return this.getId(value);
+    //     }
+    //     if (Array.isArray(value)) {
+    //         return "[" + value.map(v => this.hash(v)).join(",") + "]";
+    //     }
+    //     const keys  = Object.keys(value).sort();                     // sort keys cuz order matters when hashing
+    //     const parts = keys.map(k => `${k}:${this.hash(value[k])}`);
+    //     return `{${parts.join(",")}}`;
+    // }
 }
 
 /* test code
+debugger; 
 const once = new DFSingleFire();
 
 function test1() {
